icon problem solved with new icon
App icon added successfully

--- a/assignment1/assignment1/Base.lproj/Main.storyboard
+++ b/assignment1/assignment1/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="appstore" width="341.33334350585938" height="341.33334350585938"/>
+        <image name="appstore" width="1024" height="1024"/>
         <image name="minus.square.fill" catalog="system" width="128" height="114"/>
         <image name="plus.app.fill" catalog="system" width="128" height="114"/>
         <systemColor name="opaqueSeparatorColor">
