--- a/assignment1/assignment1/Base.lproj/Main.storyboard
+++ b/assignment1/assignment1/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appstore" highlightedImage="appstore" translatesAutoresizingMaskIntoConstraints="NO" id="Edz-WC-uCo">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="conestogaIcon" highlightedImage="conestogaIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Edz-WC-uCo">
                                 <rect key="frame" x="90" y="99" width="213" height="195"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="195" id="LVq-5Z-hFE"/>
@@ -122,7 +122,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="appstore" width="75" height="75"/>
+        <image name="conestogaIcon" width="75" height="75"/>
         <image name="minus.square.fill" catalog="system" width="128" height="114"/>
         <image name="plus.app.fill" catalog="system" width="128" height="114"/>
         <systemColor name="opaqueSeparatorColor">
